--- a/src/patterns/__environment__/60-templates/exhibition.hbs
+++ b/src/patterns/__environment__/60-templates/exhibition.hbs
@@ -90,7 +90,7 @@
     {{assign 'date.display' date.start.display}}
     {{#if (and date.start.time date.end.time)}}
       {{assign 'date.display' (combine date.display ' ' (moment date.start.time 'h:mm A') ' - ' (moment date.end.time 'h:mm A'))}}
-    {{else}}  
+    {{else}}
       {{#if if date.start.time}}
         {{assign 'date.display' (combine date.display ' ' (moment date.start.time 'h:mm A'))}}
       {{else}}
@@ -154,7 +154,7 @@
         {{assign 'date.display' date.start.display}}
         {{#if (and date.start.time date.end.time)}}
           {{assign 'date.display' (combine date.display ' ' (moment date.start.time 'h:mm A') ' - ' (moment date.end.time 'h:mm A'))}}
-        {{else}}  
+        {{else}}
           {{#if if date.start.time}}
             {{assign 'date.display' (combine date.display ' ' (moment date.start.time 'h:mm A'))}}
           {{else}}
@@ -212,7 +212,7 @@
       {{/content}}
 
       {{#content 'section-main-body'}}
-        {{#if markdown}}{{{markdown details}}}{{else}}{{{details}}}{{/if}}
+        {{#if this.markdown}}{{{markdown details}}}{{else}}{{{details}}}{{/if}}
       {{/content}}
 
       {{#content 'section-main-divider'}}
@@ -266,6 +266,10 @@
       {{/content}}
 
     {{/extend}}
+
+    {{#if (or sponsor (gt (length extras.content) 0))}}
+    {{> organisms-deep-dive heading=(default extras.heading 'Dive Deeper') columns=extras.content footer=(objectify text=sponsor)}}
+    {{/if}}
 
   </div>
   <footer class="exhibition-page-footer"></footer>
