--- a/src/patterns/__environment__/60-templates/exhibition.hbs
+++ b/src/patterns/__environment__/60-templates/exhibition.hbs
@@ -258,7 +258,7 @@
 
       {{#content 'section-main-other'}}
         {{#if events}}
-        {{> compounds-cards columns=(objectify s=1 m=1 l=1)
+        {{> compounds-cards columns=(objectify s=1 m=1 l=1 xl=1)
                             classes="section-main-content"
                             cards=events
                             card-type='listing'}}
