--- a/src/patterns/__environment__/60-templates/exhibition.hbs
+++ b/src/patterns/__environment__/60-templates/exhibition.hbs
@@ -196,6 +196,19 @@
 
 {{/if}}
 
+{{! Format extras. }}
+{{#each extras}}
+
+  {{! Remove any empty extra data.}}
+  {{#unless (or (eq heading '') (not (isString text)) (eq text ''))}}
+    {{storagePush 'extras' this}}
+  {{/unless}}
+
+{{/each}}
+
+{{! Save extras. }}
+{{assign 'extras' (storageGet 'extras')}}
+
 <div class="exhibition-page">
   <header class="exhibition-page-header"></header>
   <div class="exhibition-page-main">
@@ -267,7 +280,7 @@
 
     {{/extend}}
 
-    {{#if (or (and sponsor (not (eq sponsor '')))  (gt (length extras.content) 0))}}
+    {{#if (or (and sponsor (not (eq sponsor ''))) (gt (length extras.content) 0))}}
     {{> organisms-deep-dive heading=(default extras.heading 'Dive Deeper') columns=extras.content footer=(objectify text=sponsor)}}
     {{/if}}
 
