--- a/src/patterns/__environment__/20-atoms/11-nav-button~main.hbs
+++ b/src/patterns/__environment__/20-atoms/11-nav-button~main.hbs
@@ -1,6 +1,6 @@
 {{#unless librarian}}
   <label id="{{default id (append 'nav-button--' (hyphenate (lowercase label)))}}"
-         for="{{default for (append 'nav-menu--' (hyphenate (lowercase label)))}}"
+         for="{{#if (or utility flyout)}}{{default for (combine 'utility-nav--' (dashcase (lowercase label)))}}{{else}}{{default for (combine 'main-nav--' (dashcase (lowercase label)))}}{{/if}}"
          class="nav-button{{#if utility}} -utility{{/if}}{{#if flyout}} -flyout{{/if}}{{#if search}} -search{{/if}}{{#if toggle}} -toggle{{/if}}{{#if (or hover focus)}} is-hover{{/if}}{{#if active}} is-active{{/if}}{{#if disabled}} is-disabled{{/if}}"{{#if disabled}} disabled{{/if}} tabindex="0">
     {{#if (or (and (or flyout toggle) icon) search) }}{{> tokens-icon id=icon}}{{/if}}
     <span class="nav-button-label">{{label}}</span>
