--- a/src/patterns/__environment__/30-molecules/breadcrumbs.hbs
+++ b/src/patterns/__environment__/30-molecules/breadcrumbs.hbs
@@ -1,6 +1,6 @@
 <ul class="breadcrumbs {{#if classes}}{{ classes }}{{/if}}">
   {{#each ancestors}}
-  <li><a href="{{url}}">{{label}}</a></li>
+  <li class="breadcrumbs-crumb">{{> atoms-link classes='' icon=false href=url}}</li>
   {{/each}}
-  <li><a href="{{url}}">{{title}}</a></li>
+  <li class="breadcrumbs-crumb">{{> atoms-link classes='' icon=false href=url label=title}}</li>
 </ul>
