--- a/src/patterns/__environment__/50-organisms/flow-content-boxes.hbs
+++ b/src/patterns/__environment__/50-organisms/flow-content-boxes.hbs
@@ -1,4 +1,4 @@
 <div class="flow-content-boxes">
-  {{>molecules-feature image=feature.image context=feature.context buttons=feature.buttons description=feature.description heading=feature.heading}}
-  {{>molecules-explorer links=explorer.links heading=explorer.heading}}
+  {{#with feature}}{{> molecules-feature}}{{/with}}
+  {{#with explorer}}{{> molecules-explorer}}{{/with}}
 </div>
