Updates patterns and assets

--- a/src/engine/__environment__/css/style.css
+++ b/src/engine/__environment__/css/style.css
@@ -5004,6 +5004,18 @@ body {
 .landing-page-main {
   grid-area: main;
 }
+.landing-page-main .section-main:not(.without-intro) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.landing-page-main .section-main:not(.without-intro) .section-main-body {
+  padding-top: 2em;
+}
 .landing-page-main .section-main .section-main-body {
   display: grid;
   grid-template-columns: 1fr;
@@ -15205,6 +15217,9 @@ button, input[type=button], input[type=submit], input[type=reset] {
 .section-main-breadcrumb .breadcrumbs .breadcrumbs-crumb a.-underline {
   text-decoration: underline;
 }
+.section-main-title.intro-title {
+  color: #082B73 !important;
+}
 .section-main-body .heading.-h2 {
   font-family: "Open Sans", sans-serif;
   font-size: 22px;
@@ -15283,6 +15298,9 @@ button, input[type=button], input[type=submit], input[type=reset] {
 .section-main.-light .section-main-breadcrumb .breadcrumbs .breadcrumbs-crumb a.-underline {
   text-decoration: underline;
 }
+.section-main.-light .section-main-title.intro-title {
+  color: #082B73 !important;
+}
 .section-main.-light .section-main-body .heading.-h2 {
   color: #082B73;
 }
@@ -15350,6 +15368,9 @@ button, input[type=button], input[type=submit], input[type=reset] {
 }
 .section-main.-dark .section-main-breadcrumb .breadcrumbs .breadcrumbs-crumb a.-underline {
   text-decoration: underline;
+}
+.section-main.-dark .section-main-title.intro-title {
+  color: #FFFFFF !important;
 }
 .section-main.-dark .section-main-body .heading.-h2 {
   color: #FFFFFF;
