--- a/src/patterns/__environment__/30-molecules/tile~utility.hbs
+++ b/src/patterns/__environment__/30-molecules/tile~utility.hbs
@@ -1,5 +1,5 @@
-<div class="tile-utility{{#if description}} has-description{{/if}}">
-  <div class="tile-utility-image{{#if image.align.x}} -align-x-{{image.align.x}}{{/if}}{{#if image.align.y}} -align-x-{{image.align.y}}{{/if}}{{#if image.fit}} -{{image.fit}}{{/if}}">{{#with image}}{{> atoms-image decorative=true}}{{/with}}</div>
+<div class="tile-utility{{#if description}} has-description{{/if}}{{#if (and image image.src)}} has-image{{/if}}">
+  {{#if (and image image.src)}}<div class="tile-utility-image{{#if image.align.x}} -align-x-{{image.align.x}}{{/if}}{{#if image.align.y}} -align-x-{{image.align.y}}{{/if}}{{#if image.fit}} -{{image.fit}}{{/if}}">{{#with image}}{{> atoms-image decorative=true}}{{/with}}</div>{{/if}}
   {{#with link}}{{> atoms-link label=../title classes='tile-utility-title'}}{{/with}}
   {{#if description}}<p class="tile-utility-description">{{ellipsis (sanitize description) 300}}</p>{{/if}}
 </div>
