--- a/src/engine/__environment__/css/style.css
+++ b/src/engine/__environment__/css/style.css
@@ -4300,7 +4300,7 @@ body {
 }
 .-research-help-page.section-main .section-main-subtitle,
 .-research-help-page.section-main .section-main-section,
-.-research-help-page.section-main .section-main-sidebar {
+.-research-help-page.section-main .section-main-sidebar .section-main-content .section-main-spacer {
   display: none;
 }
 @media (max-width: 600px) {
@@ -4675,6 +4675,18 @@ body {
 }
 .info-page-main {
   grid-area: main;
+}
+.info-page-main .section-main {
+  padding-top: 0 !important;
+}
+.info-page-main .section-main-body, .info-page-main .section-main-sidebar {
+  margin-top: 4em;
+}
+.info-page-main .section-main-body > *:first-child {
+  margin-top: 0;
+}
+.info-page-main .section-main-sidebar > * + * {
+  margin-top: 2em;
 }
 .info-page-footer {
   grid-area: footer;
