--- a/src/patterns/__environment__/40-compounds/cards.hbs
+++ b/src/patterns/__environment__/40-compounds/cards.hbs
@@ -8,6 +8,7 @@
           --cols-s: {{columns}};
           --cols-m: {{columns}};
           --cols-l: {{columns}};
+          --cols-xl: {{columns}};
         {{/if}}
      "{{/if}}>
   {{#each cards}}
