--- a/src/patterns/__environment__/60-templates/material.hbs
+++ b/src/patterns/__environment__/60-templates/material.hbs
@@ -1,5 +1,32 @@
 <div class="material-page">
   <header class="material-page-header"></header>
-  {{> organisms-main type="material-page" classes="material-page-main"}}
+  <div class="material-page-main">
+
+    {{#extend 'organisms-main' type='material-page' classes='material-page-main'}}
+      {{#content 'section-main-body'}}
+        {{> compounds-blocks}}
+      {{/content}}
+      {{#content 'section-main-sidebar'}}
+        {{! TODO: Add in sidebar list (`compounds-sidebar-list`)}}
+      {{/content}}
+    {{/extend}}
+
+    {{#if (and resources (gt (length resources.cards) 0))}}
+    {{#extend 'organisms-minor' theme='dark' heading=resources.heading}}
+      {{#content 'section-minor-body'}}
+        {{> compounds-cards card-type='library-guide' cards=resources.cards}}
+      {{/content}}
+    {{/extend}}
+    {{/if}}
+
+    {{#if (and contacts (gt (length contacts.cards) 0))}}
+    {{#extend 'organisms-minor' theme='light' heading=contacts.heading}}
+    {{#content 'section-minor-body'}}
+      {{> compounds-cards card-type='contact' cards=contacts.cards}}
+    {{/content}}
+    {{/extend}}
+    {{/if}}
+
+  </div>
   <footer class="material-page-footer"></footer>
 </div>
